--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "framer-motion": "^6.3.13",
+    "highlight.js": "^11.5.1",
     "marked": "^4.0.17",
     "next": "^12.1.6",
     "react": "^18.2.0",
