--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,37 @@
-/node_modules
-/.next
-/.env*
-/.vscode
-/.husky/_
+# dependencies
+node_modules
+.pnp
+.pnp.js
+
+# output
+dist
+build
+out
+.next
+
+# testing
+coverage
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# log
+logs
+*.log
+
+# env
+.env*
+
+# turbo
+.turbo
+
+# misc
+temp
+next-env.d.ts
+*.tgz
+*.tsbuildinfo
+.DS_Store
+*.pem
