--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "dompurify": "^2.4.1",
     "marked": "^4.2.2",
     "next": "^13.0.3",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "@commitlint/config-conventional": "^17.2.0",
     "@next/eslint-plugin-next": "^13.0.3",
     "@tailwindcss/typography": "^0.5.8",
+    "@types/dompurify": "^2.4.0",
     "@types/marked": "^4.0.7",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
