--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dompurify": "^2.4.1",
     "marked": "^4.2.2",
+    "nanoid": "^4.0.0",
     "next": "^13.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
