--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "^13.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
